<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/mostrarOpcoesSw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Jogar com 2 Computadores?"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selecione sua jogada:" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/pedraIb"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/pedra"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/pedra" />

        <ImageButton
            android:id="@+id/papelIb"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/papel"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/papel" />

        <ImageButton
            android:id="@+id/tesouraIb"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/tesoura"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/tesoura" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suaJogada" />
    <ImageView
        android:id="@+id/suaJoagadaIv"
        android:layout_width="match_parent"
        android:layout_height="64dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/computador1" />
    <ImageView
        android:id="@+id/jogadaComputadorIv"
        android:layout_width="match_parent"
        android:layout_height="64dp"/>

    <LinearLayout
        android:id="@+id/selecionarOpcaoLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/computador2" />
        <ImageView
            android:id="@+id/jogadaComputador2Iv"
            android:layout_width="match_parent"
            android:layout_height="64dp"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado" />
    <TextView
        android:id="@+id/resultadoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>